--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   },
   "dependencies": {
     "gulp-htmlmin": "^5.0.1",
-    "gulp-rename": "^2.0.0"
+    "gulp-rename": "^2.0.0",
+    "sweetalert2": "^10.12.6"
   },
   "browserslist": [
     "last 1 version",
